@antv/gatsby-theme-antv/site/components/Banner.module.less
@import './mixins';

.wrapper {
  min-height: 550px;
  max-height: 803px;
  background: linear-gradient(225deg, #ffffff, #f0f5ff);
  height: calc(94vh);
  position: relative;
  overflow: hidden;
  .content {
    .container1440;
    height: 100%;
    position: relative;
    .notiWrapper {
      width: 50%;
    }
  }
  .text {
    position: relative;
    top: 26%;
    z-index: 1;
    margin-left: 4.5%;
    .title {
      font-size: 3.43em; //2.875em;
      font-weight: 800;
      color: rgba(0, 0, 0, 1);
      position: relative;
    }
    .description {
      margin-top: 0.83%; //12px;
      margin-bottom: 0px;
      color: rgba(106, 123, 140, 1);
      font-size: 1.14em;
      font-weight: 200;
      position: relative;
      width: 36%;
      max-width: 700px;
    }
    .buttons {
      display: flex;
      margin-top: 5.56%;

      .button {
        cursor: pointer;
        padding: 8px 26px;
        border-radius: 50px;
        width: 134px;
        height: 40px;
        font-size: 1.14em;
        z-index: 10;
        position: relative;
        transition: all 0.15s;
        border: 1px solid #845eff;
        background-color: transparent;
        color: #845eff;
        text-align: center;

        &:hover {
          color: #a78bff;
          border: 1px solid #a78bff;
          background-color: rgba(167, 139, 255, 0.03);
        }

        &.primary {
          border: none;
          outline: none;
          color: #fff;
          background: #845eff;

          &:hover {
            background: #a78bff;
          }
        }
      }
      .videoButton {
        width: 40px;
        margin-left: 2%;
        background-size: contain;
        border: 1px solid #873bf4;
        border-radius: 50%;
        transition: all 0.15s;
        cursor: pointer;
        .videoButtonIcon {
          margin-left: 50%;
          margin-top: 50%;
          transform: translateX(-7px) translateY(-8px);
          font-size: 18px;
          color: #873bf4;
          &:hover {
            color: #af7dff;
          }
        }
        &:hover {
          border: 1px solid #af7dff;
          background-color: rgba(135, 59, 244, 0.03);
        }
      }
      .githubWrapper {
        margin-left: 2%;
        display: flex;
        :global {
          .gh-btn {
            width: 40px;
            height: 40px;
            border-radius: 20px;
            padding: 9px;
            border: 1px solid #ced4d9;
            background: transparent;
            text-decoration: none;
            white-space: nowrap;
            display: flex;
            cursor: pointer;
            float: left;
            &:hover {
              background: #f2f4f5;
              transition: all 0.15s;
            }
            .gh-ico {
              width: 16px;
              height: 16px;
              margin-left: 2px;
              margin-top: 2px;
              background-image: url(https://gw.alipayobjects.com/mdn/rms_f8c6a0/afts/img/A*Nk9mQ48ZoZMAAAAAAAAAAABkARQnAQ);
              background-size: 100% 100%;
              background-repeat: no-repeat;
              box-sizing: border-box;
              cursor: pointer;
              color: #333;
            }
            .gh-text {
              display: none;
            }
          }
          .gh-count {
            position: relative;
            display: none;
            /* hidden to start */
            margin-left: 52px;
            margin-top: 7px;
            border: 1px solid #d4d4d4;
            padding: 2px 10px;
            font-weight: 700;
            height: 65%;
            border-radius: 5px;
            color: rgb(49, 70, 89);
            &:hover {
              background: #f2f4f5;
              transition: all 0.15s;
            }
          }
          .gh-count:hover,
          .gh-count:focus {
            color: #4183c4;
          }
          .gh-count:before,
          .gh-count:after {
            content: '';
            position: absolute;
            display: inline-block;
            width: 0;
            height: 0;
            border-color: transparent;
            border-style: solid;
          }
          .gh-count:before {
            top: 50%;
            left: -3px;
            margin-top: -5px;
            border-width: 4px 4px 4px 0;
            border-right-color: #fafafa;
          }
          .gh-count:after {
            top: 50%;
            border-width: 5px 5px 5px 0;
            border-right-color: #d4d4d4;
            left: -5px;
            z-index: -1;
            margin-top: -6px;
          }
        }
      }
    }
  }
  .notifications {
    width: 80%;
    display: flex;
    bottom: 40px;
    position: absolute;
    z-index: 1;
    margin-left: 4.5%;
    .notiWrapper {
      width: 50%;
    }
  }
  .teaser {
    display: 'flex';
    position: absolute;
    right: 10%;
    margin-top: -300px;
    width: 52%;
    max-width: 598px;
    height: 324px;
    margin: auto;
    margin-top: 0;
    top: 0;
    bottom: 0;
    .teaserimg {
      width: 100%;
      height: auto;
      position: relative;
    }
  }
  .backLeftBottom {
    position: absolute;
    left: -8%;
    bottom: -20px;
  }
}

:global {
  .anticon-info-circle {
    display: none !important;
  }
  .ant-modal-confirm-btns {
    display: none !important;
  }
  .ant-modal-confirm-title {
    display: none !important;
  }
  .ant-modal-close {
    display: block !important;
  }
  .ant-modal-body {
    padding: 0 !important;
    .ant-modal-confirm-content {
      margin: 0 !important;
    }
  }
}

@media (max-width: 1144px) {
  .wrapper {
    .teaser {
      transition: 0.3s all;
      margin: auto;
      margin-top: 0;
      top: 0;
      bottom: 0;
    }
  }
}

@media (max-width: 900px) {
  .wrapper {
    .content {
      width: 91.46%;
      margin-left: 4.27%;
      margin-bottom: 5%;
      position: relative;
    }
    .text {
      top: 16.7%;
      text-align: center;
      .title {
        font-size: 2.857em;
        margin-left: 0;
      }
      .description {
        width: 100%;
        margin-left: 0;
        font-size: 1em;
      }
      .buttons {
        text-align: center;
        display: inline-flex;
        .more {
          font-size: 1em;
        }
        .githubIframe {
          height: 40px;
        }
        .videoButton {
          width: 80px;
          height: 37px;
          margin-left: 10%;
        }
      }
    }
    .notifications {
      width: 100%;
      bottom: 60px;
      .notiWrapper {
        width: 100%;
        position: absolute;
      }
      .noti0 {
        width: 100%;
        position: absolute;
        animation: showAndHide0 6s infinite;
      }
      .noti1 {
        width: 100%;
        position: absolute;
        animation: showAndHide1 6s infinite;
      }
    }
    .teaser {
      width: 100%;
      max-width: 1200px;
      margin-left: 0;
      margin-right: 0;
      margin-top: auto;
      top: 30%;
      .teaserimg {
        width: 40%;
        margin-left: 30%;
      }
    }
  }
}

@media (max-width: 510px) {
  .wrapper {
    .text {
      .buttons {
        margin-top: 70%;
        .videoButton {
          display: none;
        }
        .githubWrapper {
          display: none;
        }
      }
    }
    .teaser {
      width: 100%;
      top: 5%;
      .teaserimg {
        width: 75%;
        margin-left: 12.5%;
      }
    }
    .backLeftBottom {
      display: none;
    }
  }
}

@media (max-width: 480px) {
  .wrapper {
    .teaser {
      top: 15%;
    }
  }
}

/* Standard syntax */
@keyframes showAndHide0 {
  0% {
    opacity: 1;
    margin-top: 0px;
  }
  33.3% {
    opacity: 1;
    margin-top: 0px;
  }
  50% {
    opacity: 0;
    margin-top: -30px;
  }
  83.3% {
    opacity: 0;
    margin-top: 30px;
  }
  100% {
    opacity: 1;
    margin-top: 0px;
  }
}

/* Standard syntax */
@keyframes showAndHide1 {
  0% {
    opacity: 0;
    margin-top: 30px;
  }
  33.3% {
    opacity: 0;
    margin-top: 30px;
  }
  40% {
    opacity: 1;
    padding-top: 0px;
  }
  83.3% {
    opacity: 1;
    margin-top: 0px;
  }
  100% {
    opacity: 0;
    margin-top: -30px;
  }
}

